--- a/index.html
+++ b/index.html
@@ -14,15 +14,27 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
-            <h3>Ma<span class="text-primary">r</span>y</h3>
+            <h3 class=first-name>Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Blog</a></li>
+                <li class="small-text"><a href="">Portfolio</a></li>
+                <li class="small-text"><a href="">Blog</a></li>
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="texts">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because
+                    as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
+
 
     </header>
     <main>
