--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </ul>
         </nav>
         <div class="banner">
+            
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
@@ -32,12 +33,39 @@
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
-            <img src="images/hardy.png" alt="">
+            
+            <div>
+                <img src="images/hardy.png" alt="">
+            </div>
         </div>
 
 
     </header>
     <main>
+        <section class="about">
+            <div class="section-title"><h3>About Me</h3></div>
+            <div class="section-description"><p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p></div>
+
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-description"><b>Mary Hardy</b></p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-description"><b>info@gmail.com</b></p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Date of birth:</p>
+                    <p class="info-description"><b>11 November 1987</b></p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From:</p>
+                    <p class="info-description"><b>Los Angeles, USA</b></p>
+                </div>
+
+            </div>
+        </section>
 
     </main>
     <footer>
